# EcomRec

./: .gitignore  Makefile  README.md  README_EN.md  pyproject.toml  requirements.txt
app/: Home.py
app/pages/: 1_📊_用户画像.py  2_🔍_召回模型对比.py  3_🎯_排序模型分析.py  4_🛍️_推荐演示.py
configs/: config.yaml
configs/data/: amazon_beauty.yaml
configs/rank/: deepfm.yaml  lgb.yaml  widedeep.yaml
configs/recall/: als.yaml  bpr.yaml  itemcf.yaml  pop.yaml
data/: README.md
docs/: design_decisions.md
notebooks/: 01_eda.ipynb  02_rfm_user_profile.ipynb  03_recall_benchmark.ipynb  04_rank_benchmark.ipynb  05_end2end_case_study.ipynb
reports/: 01_数据分析报告.md  02_用户画像报告.md  03_推荐模型对比报告.md  04_项目总结.md  deepfm_history.json  lgb_feature_importance.json  rank_benchmark.json  recall_benchmark.json
scripts/: 00_download_data.py  01_preprocess.py  02_train_recall.py  03_train_rank.py  verify_ctr_features.py  verify_pipeline.py  verify_rank_models.py  verify_recall.py
src/ecom_rec/: __init__.py
src/ecom_rec/data/: __init__.py  clean.py  download.py  split.py
src/ecom_rec/eval/: __init__.py  rank_metrics.py  recall_metrics.py
src/ecom_rec/features/: __init__.py  ctr_features.py  profile.py  rfm.py
src/ecom_rec/pipeline/: __init__.py  multi_recall.py  recommend.py  rerank.py
src/ecom_rec/rank/: __init__.py  deepfm.py  lgb.py  trainer.py  widedeep.py
src/ecom_rec/recall/: __init__.py  als.py  base.py  bpr.py  itemcf.py  pop.py
src/ecom_rec/utils/: __init__.py  device.py  io.py  logger.py  seed.py  (+1 more)
tests/: test_kcore.py  test_pipeline.py  test_recall_metrics.py  test_rfm.py
