[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ecom-rec"
version = "0.1.0"
description = "电商用户行为分析与深度混合推荐系统"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
dependencies = [
    "polars>=1.0,<2.0",
    "pyarrow>=17.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.5,<2.0",
    "implicit>=0.7,<1.0",
    "lightgbm>=4.5,<5.0",
    "torch>=2.4",
    "torchmetrics>=1.4,<2.0",
    "mlflow>=2.16,<3.0",
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",
    "plotly>=5.24,<6.0",
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
    "streamlit>=1.39,<2.0",
    "tqdm>=4.66",
    "rich>=13.9",
    "requests>=2.31",
    "numpy>=1.26",
    "scipy>=1.12",
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
